<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customerui.MyorderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_myorder"
        android:id="@+id/textView4"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_number_string"
        android:id="@+id/textView24"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_string"
        android:id="@+id/textView25"
        android:textSize="20sp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/textView24"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_string"
        android:id="@+id/textView26"
        android:textSize="20sp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/textView25"
        android:textColor="#000000"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:id="@android:id/list"
        android:layout_below="@+id/textView26"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel_order"
        android:id="@+id/cancel_order"
        android:background="#2E7D32"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:layout_below="@android:id/list"
        android:layout_toEndOf="@+id/textView24" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_confirm_order"
        android:id="@+id/confirm_order"
        android:background="#2E7D32"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/cancel_order"
        android:layout_toEndOf="@+id/textView4" />

</RelativeLayout>
