<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/order_number_string"
        android:textSize="20sp"
        android:layout_marginStart="50dp"
        android:id="@+id/orderNumberBoxRes"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/date_string"
        android:id="@+id/dateTextView"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_alignTop="@id/orderNumberBoxRes"
        android:layout_toEndOf="@id/orderNumberBoxRes"
        android:layout_marginStart="60dp"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/price_string"
        android:id="@+id/priceTextViewRes"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        android:textColor="#000000"
        android:layout_alignTop="@+id/dateTextView"
        android:layout_toEndOf="@+id/dateTextView" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/status_string"
        android:id="@+id/statusTextViewRes"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:textColor="#000000"
        android:layout_alignTop="@+id/priceTextViewRes"
        android:layout_toEndOf="@+id/priceTextViewRes" />

</RelativeLayout>
