<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jiaqiz.cmu.edu.foodeliver.login.LoginActivity"
    tools:showIn="@layout/login_activity_login">

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/email"/>

    <Button
        android:id="@+id/email_sign_in_customer_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in_customer"
        android:textStyle="bold"
        android:background="#2E7D32"
        android:textColor="#ffffff"
        android:layout_below="@+id/password"/>

    <Button
        android:id="@+id/email_sign_in_restaurant_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in_restaurant"
        android:textStyle="bold"
        android:background="#2E7D32"
        android:textColor="#ffffff"
        android:layout_below="@+id/email_sign_in_customer_button"/>

    <TextView
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Don't have an Account?"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/email_sign_in_restaurant_button"/>

    <Button
        android:id="@+id/email_register_customer_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_customer_register"
        android:textStyle="bold"
        android:background="#2E7D32"
        android:textColor="#ffffff"
        android:layout_below="@+id/account"/>

    <Button
        android:id="@+id/email_register_restaurant_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_restaurant_register"
        android:textStyle="bold"
        android:background="#2E7D32"
        android:textColor="#ffffff"
        android:layout_below="@+id/email_register_customer_button"/>

    <ImageView
        android:layout_width="4000dp"
        android:layout_height="500dp"
        android:id="@+id/loginView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/login"
        android:layout_below="@+id/email_register_restaurant_button"/>

</RelativeLayout>
