<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/order_number_string"
        android:textSize="20sp"
        android:id="@+id/orderNumberBox"
        android:layout_marginStart="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/restaurant_string"
        android:id="@+id/resTextView"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_alignTop="@id/orderNumberBox"
        android:layout_toEndOf="@id/orderNumberBox"
        android:layout_marginStart="45dp"/>

    <TextView
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/status_string"
        android:id="@+id/statusTextView"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_alignTop="@+id/resNameTextView"
        android:layout_toEndOf="@id/resTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"/>

</RelativeLayout>
