<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/name_string"
        android:id="@+id/resNameTextView"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:textColor="#000000"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:id="@+id/resPicView"
        android:layout_marginStart="55dp"
        android:layout_alignTop="@+id/resNameTextView"
        android:layout_toEndOf="@+id/resNameTextView"/>

    <TextView
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/category_string"
        android:id="@+id/categoryTextView"
        android:textSize="20sp"
        android:layout_marginStart="50dp"
        android:layout_alignTop="@+id/resPicView"
        android:layout_toEndOf="@+id/resPicView"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/location_string"
        android:id="@+id/locTextView"
        android:textSize="20sp"
        android:layout_marginStart="45dp"
        android:layout_alignTop="@+id/categoryTextView"
        android:layout_toEndOf="@+id/categoryTextView"
        android:textColor="#000000"/>

</RelativeLayout>
