<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="45dp"
        android:layout_height="70dp"
        android:text="@string/id_string"
        android:id="@+id/menuidTextView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:text="@string/name_string"
        android:id="@+id/menuNameTextView"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_alignTop="@+id/menuidTextView"
        android:layout_toEndOf="@+id/menuidTextView"
        android:textColor="#000000"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:id="@+id/menuPicView"
        android:layout_marginStart="20dp"
        android:layout_alignTop="@+id/menuNameTextView"
        android:layout_toEndOf="@+id/menuNameTextView"/>

    <TextView
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/price_string"
        android:id="@+id/priceTextView"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        android:layout_alignTop="@+id/menuPicView"
        android:layout_toEndOf="@+id/menuPicView"
        android:textColor="#000000"/>

    <Spinner
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/quantityEdit"
        android:entries="@array/quantity"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_alignTop="@+id/priceTextView"
        android:layout_toEndOf="@+id/priceTextView"
        android:textColor="#000000"/>

</RelativeLayout>
